<resources>
    <string name="app_name">TicTacToeApp</string>
    <string name="let_s_play_choose_mode">Let\'s play, Choose Mode</string>
    <string name="with_your_friend">With your friend</string>
    <string name="with_ai">With AI</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_friend_name">Enter your friend name</string>
    <string name="next">Next</string>
    <string name="please_enter_valid_name">Please enter valid name</string>
    <string name="team_heart">Team heart</string>
    <string name="team_star">Team star</string>
    <string name="side">You are team</string>
    <string name="star_side">You are team star</string>
    <string name="hello_user">Hello %1$s :)</string>
    <string name="you_choose">You are team %1$s</string>
    <string name="all_set">You are all set</string>
    <string name="choose_a_side">Please choose your side!</string>
    <string name="play">Play</string>
    <string name="description_image_tic_tac_toe_check">Image button check in Tic Tac Toe game</string>
    <string name="description_back_button">Clickable button help back to the forward screen</string>
    <string name="robot">Robot</string>
    <string name="game_lost"> lost the game!</string>
    <string name="template_won_game">%1$s won the game!</string>
    <string name="play_again">Play again!</string>
</resources>