<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/img_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big_2_80dp"
        android:src="@drawable/icon_tic_tac_toe"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_game_title"
        style="@style/primaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_5"
        android:text="@string/let_s_play_choose_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_app_logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play_with_friend"
        style="@style/buttonStyle"
        android:layout_marginTop="@dimen/margin_normal_5"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/with_your_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_game_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play_with_AI"
        style="@style/AIButtonStyle"
        android:layout_marginTop="@dimen/margin_normal_5"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/with_ai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play_with_friend" />

    <ImageView
        android:id="@+id/img_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play_with_AI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:background="?android:selectableItemBackground" />
</androidx.constraintlayout.widget.ConstraintLayout>