<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small_5"
    tools:context=".ui.ResultActivity">

    <ImageView
        android:id="@+id/img_app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_normal_10"
        android:src="@drawable/icon_tic_tac_toe"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/margin_normal_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_app_logo"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/congratulate" />

    <TextView
        android:id="@+id/tv_winner"
        style="@style/normalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/side"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie_animation_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/tv_winner"
        app:layout_constraintStart_toStartOf="@id/tv_winner"
        app:layout_constraintTop_toBottomOf="@id/tv_winner">


        <ImageView
            android:id="@+id/img_winner_team"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_star" />

        <TextView
            android:id="@+id/tv_winner_team"
            style="@style/normalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small_2"
            android:gravity="center"
            android:text="@string/team_star" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play_again"
        style="@style/btnPlayAgainStyle"
        android:layout_marginTop="@dimen/margin_normal_5"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>