<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.GameActivity">

    <ImageButton
        android:id="@+id/img_close_game_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/description_back_button"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="@dimen/padding_normal_2"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/purple_200" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine4_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tv_friend_or_a_i_steps"
        style="@style/stepperTextStyle"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@id/img_friends_or_AI"
        app:layout_constraintStart_toStartOf="@id/guidLine7"
        app:layout_constraintTop_toTopOf="@id/img_friends_or_AI" />

    <ImageView
        android:id="@+id/img_friends_or_AI"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/margin_small_5"
        android:src="@drawable/robot"
        app:layout_constraintBottom_toTopOf="@id/tv_name_of_robot_or_friend"
        app:layout_constraintEnd_toEndOf="@id/guidLine8"
        app:layout_constraintTop_toBottomOf="@id/guidLine1" />

    <TextView
        android:id="@+id/tv_name_of_robot_or_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small_5"
        android:text="@string/robot"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/text_size_small_4"
        app:layout_constraintBottom_toBottomOf="@id/guidLine1_1"
        app:layout_constraintEnd_toEndOf="@id/guidLine8"
        app:layout_constraintTop_toBottomOf="@id/img_friends_or_AI" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small_4"
        android:layout_marginBottom="@dimen/margin_small_4"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/guidLine4"
        app:layout_constraintEnd_toEndOf="@id/guidLine8"
        app:layout_constraintStart_toStartOf="@id/guidLine7"
        app:layout_constraintTop_toTopOf="@id/guidLine1_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid_line_horizontal_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.333" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid_line_horizontal_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.666" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid_line_vertical_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.333" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid_line_vertical_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.666" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_small_1"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_1"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_small_1"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_small_1"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_1" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_small_1"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_2" />

            <ImageView
                android:id="@+id/img_first"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="@id/guid_line_horizontal_1"
                app:layout_constraintEnd_toEndOf="@id/guid_line_vertical_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_second"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toBottomOf="@id/guid_line_horizontal_1"
                app:layout_constraintEnd_toEndOf="@id/guid_line_vertical_2"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_third"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toBottomOf="@id/guid_line_horizontal_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_fourth"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toBottomOf="@id/guid_line_horizontal_2"
                app:layout_constraintEnd_toEndOf="@id/guid_line_vertical_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_1" />

            <ImageView
                android:id="@+id/img_fifth"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="@id/guid_line_horizontal_2"
                app:layout_constraintEnd_toEndOf="@id/guid_line_vertical_2"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_1"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_1" />

            <ImageView
                android:id="@+id/img_sixth"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toBottomOf="@id/guid_line_horizontal_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_2"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_1" />

            <ImageView
                android:id="@+id/img_seventh"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guid_line_vertical_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_2" />

            <ImageView
                android:id="@+id/img_eighth"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guid_line_vertical_2"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_1"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_2" />

            <ImageView
                android:id="@+id/img_ninth"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_image_tic_tac_toe_check"
                android:padding="@dimen/padding_normal_5"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guid_line_vertical_2"
                app:layout_constraintTop_toTopOf="@id/guid_line_horizontal_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_small_5"
        android:src="@drawable/ic_boy"
        app:layout_constraintBottom_toTopOf="@id/tv_name_of_user"
        app:layout_constraintStart_toStartOf="@id/guidLine7"
        app:layout_constraintTop_toBottomOf="@id/guidLine4" />

    <TextView
        android:id="@+id/tv_name_of_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small_5"
        android:text="@string/robot"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/text_size_small_4"
        app:layout_constraintBottom_toBottomOf="@id/guidLine4_1"
        app:layout_constraintStart_toStartOf="@id/guidLine7"
        app:layout_constraintTop_toBottomOf="@id/img_user" />

    <TextView
        android:id="@+id/tv_user_steps"
        style="@style/stepperTextStyle"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@id/img_user"
        app:layout_constraintEnd_toEndOf="@id/guidLine8"
        app:layout_constraintTop_toTopOf="@id/img_user" />


</androidx.constraintlayout.widget.ConstraintLayout>